--- a/tc204.md
+++ b/tc204.md
@@ -1,22 +1,26 @@
-﻿[TC204 \- Official ISO Webpage](https://www.iso.org/committee/54706.html)
+<!-- tc204.md -->
 
-<NOTE: The whole site is meant for Practitioners, with a page more focused towards Authors who are contributing / collaborating with TC204>
+>[!Important]
+>🚧 Site under construction 🚧
+> 
+>This site  is currently focussed on ITS Practitioners, however Authors who are contributing / collaborating with TC204 deliverables are also likely to find it of interest - particularly until we publish pages more focussed to their task.
+>
+>Our site developers would welcome any constructive inputs through [TC204 Secretariat]( https://www.iso.org/committee/54706.html#secretariat) with a short title for your comment as the _email subject_ <kbd>WG1 - TC204 Blue Webpage - [Short Comment title] </kbd>
 ---
-# Welcome to ISO/TC 204
-## Scope of TC 204
-Standardization of information, communication and control systems in the field of urban and rural surface transportation, including intermodal and multimodal aspects thereof, traveller information, traffic management, public transport, commercial transport, emergency services and commercial services in the intelligent transport systems (ITS) field.
-
-Excluded:
-* in-vehicle transport information and control systems (ISO/TC 22).
-
-NOTE: 
-ISO/TC 204 is responsible for the overall system aspects and infrastructure aspects of intelligent transport systems (ITS), as well as the coordination of the overall ISO work programme in this field including the schedule for standards development, taking into account the work of existing international standardization bodies.
-
+# Welcome to ISO/TC 204's customised page
+[Return to TC204's Official ISO Webpage](https://www.iso.org/committee/54706.html)
+ 
+## Scope of TC 204 Intelligent transport systems
+>🚧 Update text from approved TC204 Strategic Business Plan...
+ 
+_ISO TC 204 addresses the worldwide market that has come to be known as Intelligent Transport Systems  (ITS). Standardization of information, communication and control systems in the field of urban and rural surface transportation, including intermodal and multimodal aspects thereof, traveller information, traffic management, public transport, commercial transport, emergency services and commercial service in the intelligent transport systems (ITS) field._
+ 
 **⚠️Not what you were looking for?** Click here for [ISO Technical Committees that may be closer to your interest](brain://api.thebrain.com/ap_AaC78Uk6NqQr1p80yUQ/EUV7sHa2okOmTjD0XEUh6Q/IsoTechnicalCommitteesThatMayBeMoreCloselyRelatedToYourInterest). Alternately, our [resources](brain://api.thebrain.com/ap_AaC78Uk6NqQr1p80yUQ/mlojWSuS60aoOQEmfJfptQ/Resources) may help.
+ 
 # What WILL you find on this site? 
 A user-friendly overview of TC204 including:
-* The resources we deliver through ISO (such as standards and technical reports)
-* The resources we oversee, such as the Central ITS Data Concepts Register (CIDCR) and Application IDentification (AID) register
+* resources we **_deliver_** through ISO (such as standards and technical reports)
+* resources we **_oversee_**, such as the Central ITS Data Concepts Register (CIDCR) and Application IDentification (AID) register
 * Guidance to users and authors of our standards
 * Links to related [resources](brain://mlojWSuS60aoOQEmfJfptQ/Resources) produced by others (in ISO and elsewhere)
 # What WON'T you find on this site?
