--- a/tc204.md
+++ b/tc204.md
@@ -15,16 +15,20 @@
  
 _ISO TC 204 addresses the worldwide market that has come to be known as Intelligent Transport Systems  (ITS). Standardization of information, communication and control systems in the field of urban and rural surface transportation, including intermodal and multimodal aspects thereof, traveller information, traffic management, public transport, commercial transport, emergency services and commercial service in the intelligent transport systems (ITS) field._
  
-**⚠️Not what you were looking for?** Click here for [ISO Technical Committees that may be closer to your interest](brain://api.thebrain.com/ap_AaC78Uk6NqQr1p80yUQ/EUV7sHa2okOmTjD0XEUh6Q/IsoTechnicalCommitteesThatMayBeMoreCloselyRelatedToYourInterest). Alternately, our [resources](brain://api.thebrain.com/ap_AaC78Uk6NqQr1p80yUQ/mlojWSuS60aoOQEmfJfptQ/Resources) may help.
- 
+**⚠️Not what you were looking for?** Click here for [ISO Technical Committees that may be closer to your interest](resources).
+<br>
+<br>
+
 # What WILL you find on this site? 
 A user-friendly overview of TC204 including:
 * resources we **_deliver_** through ISO (such as standards and technical reports)
-* resources we **_oversee_**, such as the Central ITS Data Concepts Register (CIDCR) and Application IDentification (AID) register
+* resources we **_oversee_**, such as the [Central ITS Data Concepts Register (CIDCR)](🚧link) and [Application IDentification (AID) register](🚧link)
 * Guidance to users and authors of our standards
-* Links to related [resources](brain://mlojWSuS60aoOQEmfJfptQ/Resources) produced by others (in ISO and elsewhere)
+* Links to related [resources](resources.md) produced by others (in ISO and elsewhere)
+<br>
+
 # What WON'T you find on this site?
-* A comprehensive introduction to ITS architectures or solution design. We have collated a number of rich [resources](brain://api.thebrain.com/ap_AaC78Uk6NqQr1p80yUQ/mlojWSuS60aoOQEmfJfptQ/Resources) that can inform you in great on these broader topics.
+* A comprehensive introduction to ITS architectures or solution design. We have collated a number of rich [resources](resources.md) that can inform you in great on these broader topics.
 
 
-Ready to explore?  [Start here\.\.](brain://4uMoReEcWEevHqFgU6AShA/StartHere)
+Ready to explore?  [Start here](start.md)
